# framelaw

./: AGENT.md  Cargo.toml  Makefile
docs/: framelaw-architecture-v01.md
examples/: basic_validation.py
framelaw-core/: Cargo.toml
framelaw-core/src/: checks.rs  column.rs  errors.rs  inference.rs  lib.rs  schema.rs
framelaw-py/: Cargo.toml  pyproject.toml
framelaw-py/python/framelaw/: __init__.py
framelaw-py/src/: lib.rs
